* Remove unused infrastructure to administer access role groups
* Stricter data model for storage of foreign currency exchange rates
* Simplified request handling by
  * Making old/bin/old-handler.pl a PSGI app (LedgerSMB::oldHandler)
  * Stripping LedgerSMB::Form from anything handled by middleware
  * Separating 'setup.pl authentication' into its own middleware

Dependency updates
* Dojo Toolkit updated to 1.16.0
* TeX::Encode >= 2.007
* Authen::SASL (new)
* Cookie::Baker (new)
* Email::Sender (new)
* Email::Stuffer (new)
* Session::Storage::Secure (new)
* String::Random (new)
* MIME::Lite (dropped)


Changelog for 1.7 Series
2019-10-04

Changelog for 1.7.9
* Fix authentication issue due to inconsistent cookie handling


Changelog for 1.7.8
* Upgrade Dojo dependency to 1.15.1
* Load the template from the database when printing receipts
* Prevent dead-locks in response to request from timed out session
* Add monetary formatting to payments/receipts screen and report


Changelog for 1.7.7
* Fix currency column not being available in the parts screen


Changelog for 1.7.6
* Disallow rate entry for the default currency (#4236)
* Fix formatting on-hand (OH) column on orders to follow user settings (#3334)
* Fix UI translation other than the menu, regressed from 1.6 (#4293)
* Fix missing 'Entered At' date in contact notes (#2822)
* Fix removal of lines from orders and vendor invoices on entry (#3703)


Changelog for 1.7.5
* Fix failure to save tax forms (#4252)
* Fix failure to undo database edits when surrounding code fails (#4253)
* Allow uploads of files with MIME types unavailable in the database (#1949)
* Fix failure to render (AR/AP) aging report (#4259, #4260)
* Separate authentication domains for setup.pl and login.pl (#4247)


Changelog for 1.7.4
* Fix COGS failure when posting AP invoice reversal (#4218)
* Include first transaction on account in reconciliation (#4221)
* Fix error on reconciliation when no prior balance available (#4224)