@@ -1,0 +1,1 @@
+DELETE FROM defaults WHERE setting_key = 'queue_payments';
